--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "2.4.5",
     "lucide-react": "^0.536.0",
     "next": "^15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-scroll": "^1.9.3"
+    "react-scroll": "^1.9.3",
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
